# caylon

./: .gitignore  LICENSE  README.md  build-debug.sh  build.sh  caylon.json  kaylon.json  main.py  package-lock.json  package.json  plugin.json  pnpm-lock.yaml
backend/: Cargo.toml  Dockerfile  build-docker-debug.sh  build-docker.sh  build.sh  create_docker_img.sh  entrypoint-debug.sh  entrypoint.sh  run_docker_debug.sh  run_docker_img.sh
backend/caylon-config/: Cargo.toml
backend/caylon-config/src/: about.rs  action.rs  base.rs  button.rs  element.rs  event_display.rs  lib.rs  reading.rs  result_display.rs  slider.rs  toggle.rs  transformer.rs
backend/caylon-studio/: Cargo.toml  README.md  index.html  index.scss  run.sh
backend/caylon-studio/src/: lib.rs
backend/caylon-studio/src/api/: get_hits.rs  get_index.rs  get_resources.rs  mod.rs
backend/caylon-studio/src/ui/: app.rs  footer_bar.rs  hit_counter.rs  json_context.rs  json_view.rs  mod.rs  title_bar.rs
backend/caylon-studio/src/ui/element/: add_element.rs  button.rs  elements.rs  event_display.rs  mod.rs  msg_common.rs  reading_display.rs  remove_element.rs  result_display.rs  slider.rs  toggle.rs
backend/caylon-studio/src/ui/element/edit/: action_editor.rs  always_str.rs  always_usize.rs  mod.rs  optional_str.rs  optional_u64.rs
backend/caylon-studio/src/ui/element/edit/actions/: command.rs  javascript.rs  json.rs  mirror.rs  mod.rs  transform.rs
backend/caylon-studio/src/ui/element/fake/: button.rs  display.rs  mod.rs  slider.rs  toggle.rs
backend/src/: cli.rs  consts.rs  main.rs
backend/src/api/: about.rs  async_utils.rs  get_display.rs  get_item.rs  get_items.rs  log_it.rs  mod.rs  on_event.rs  on_javascript_result.rs  on_update.rs  reload.rs  run_js.rs  steam_types.rs  types.rs
backend/src/config/: about.rs  action.rs  base.rs  button.rs  element.rs  event_display.rs  mod.rs  reading.rs  result_display.rs  slider.rs  toggle.rs  transformer.rs
backend/src/runtime/: actor.rs  command_actor.rs  communication.rs  executor.rs  js_router.rs  mod.rs  periodic_actor.rs  primitive_utils.rs  result_router.rs
backend/src/runtime/actors/: actor.rs  command_actor.rs  javascript_actor.rs  json_actor.rs  mod.rs  periodic_actor.rs  sequential_actor.rs  transform_actor.rs
server/: Cargo.toml
server/src/: main.rs
server/src/config/: about.rs  action.rs  base.rs  button.rs  element.rs  mod.rs  reading.rs  slider.rs  toggle.rs
src/: backend.ts  consts.ts  index.tsx  steam_events.ts
src/components/: about.tsx  element.tsx  elements.tsx
src/usdpl_front/: usdpl_front.js  usdpl_front_bg.wasm
