[package]
name = "kaylon"
version = "0.1.0"
edition = "2021"
authors = ["NGnius <ngniusness@gmail.com>"]
description = "Better than the Borg"
license = "MIT"
repository = "https://github.com/NGnius/kaylon"

[dependencies]
usdpl-back = { version = "0.7.0", features = ["decky"]}

clap = { version = "3.2", features = ["derive", "std"], default-features = false }

# async
tokio = { version = "*", features = ["time"] }
async-trait = "0.1.57"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
log = "0.4"
simplelog = "0.12"

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
