[package]
name = "caylon"
version = "0.1.0"
edition = "2021"
authors = ["NGnius <ngniusness@gmail.com>"]
description = "Better than the Borg"
license = "MIT"
repository = "https://github.com/NGnius/kaylon"

[dependencies]
usdpl-back = { version = "0.10.0"}

clap = { version = "3.2", features = ["derive", "std"], default-features = false }

# async
tokio = { version = "*", features = ["time"] }
async-trait = { version = "0.1" }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
jmespath = { version = "0.3", features = [ "sync" ] }

regex = { version = "1" }

# logging
log = { version = "0.4" }
simplelog = { version = "0.12" }

[features]
default = []
decky = ["usdpl-back/decky"]
encrypt = ["usdpl-back/encrypt"]

[profile.release]
debug = false
strip = true
lto = true
codegen-units = 4
